@@ -1,3 +1,14 @@
+2/5/2019
+
+# Parameters
+- `realignTraces` did not have a section field, causing crashes on `Config.save`; this has been fixed
+# TracesController
+- spike highlights were not clearing after toggling spikes off; this has been fixed
+- annoying "Beginning/End of file" message triggered before reaching BOF/EOF; this has been fixed
+# PreviewController
+- spike highlights were not clearing after toggling spikes off; this has been fixed
+- annoying "Beginning/End of file" message triggered before reaching BOF/EOF; this has been fixed
+
 2/4/2019
 
 # Parameters
